; ModuleID = '/home/carl/AnghaBench/postgres/src/interfaces/ecpg/ecpglib/extr_descriptor.c_set_desc_attr.c'
source_filename = "/home/carl/AnghaBench/postgres/src/interfaces/ecpg/ecpglib/extr_descriptor.c_set_desc_attr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.descriptor_item = type { i32, i8*, i32 }
%struct.variable = type { i64, i64 }
%struct.ECPGgeneric_varchar = type { i32 }

@ECPGt_bytea = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.descriptor_item*, %struct.variable*, i8*)* @set_desc_attr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_desc_attr(%struct.descriptor_item* %0, %struct.variable* %1, i8* %2) #0 {
  %4 = alloca %struct.descriptor_item*, align 8
  %5 = alloca %struct.variable*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca %struct.ECPGgeneric_varchar*, align 8
  store %struct.descriptor_item* %0, %struct.descriptor_item** %4, align 8
  store %struct.variable* %1, %struct.variable** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load %struct.variable*, %struct.variable** %5, align 8
  %9 = getelementptr inbounds %struct.variable, %struct.variable* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @ECPGt_bytea, align 8
  %12 = icmp ne i64 %10, %11
  br i1 %12, label %13, label %16

13:                                               ; preds = %3
  %14 = load %struct.descriptor_item*, %struct.descriptor_item** %4, align 8
  %15 = getelementptr inbounds %struct.descriptor_item, %struct.descriptor_item* %14, i32 0, i32 0
  store i32 0, i32* %15, align 8
  br label %28

16:                                               ; preds = %3
  %17 = load %struct.variable*, %struct.variable** %5, align 8
  %18 = getelementptr inbounds %struct.variable, %struct.variable* %17, i32 0, i32 1
  %19 = load i64, i64* %18, align 8
  %20 = inttoptr i64 %19 to %struct.ECPGgeneric_varchar*
  store %struct.ECPGgeneric_varchar* %20, %struct.ECPGgeneric_varchar** %7, align 8
  %21 = load %struct.descriptor_item*, %struct.descriptor_item** %4, align 8
  %22 = getelementptr inbounds %struct.descriptor_item, %struct.descriptor_item* %21, i32 0, i32 0
  store i32 1, i32* %22, align 8
  %23 = load %struct.ECPGgeneric_varchar*, %struct.ECPGgeneric_varchar** %7, align 8
  %24 = getelementptr inbounds %struct.ECPGgeneric_varchar, %struct.ECPGgeneric_varchar* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load %struct.descriptor_item*, %struct.descriptor_item** %4, align 8
  %27 = getelementptr inbounds %struct.descriptor_item, %struct.descriptor_item* %26, i32 0, i32 2
  store i32 %25, i32* %27, align 8
  br label %28

28:                                               ; preds = %16, %13
  %29 = load %struct.descriptor_item*, %struct.descriptor_item** %4, align 8
  %30 = getelementptr inbounds %struct.descriptor_item, %struct.descriptor_item* %29, i32 0, i32 1
  %31 = load i8*, i8** %30, align 8
  %32 = call i32 @ecpg_free(i8* %31)
  %33 = load i8*, i8** %6, align 8
  %34 = load %struct.descriptor_item*, %struct.descriptor_item** %4, align 8
  %35 = getelementptr inbounds %struct.descriptor_item, %struct.descriptor_item* %34, i32 0, i32 1
  store i8* %33, i8** %35, align 8
  ret void
}

declare dso_local i32 @ecpg_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
